<resources>
    <string name="app_name">Android_Calculadora</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="tan">Tan</string>
    <string name="cos">Cos</string>
    <string name="x2">x2</string>
    <string name="x3">x3</string>
    <string name="sen">Sen</string>
    <string name="cientifica">Cientifica</string>
</resources>
