<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CientificaActivity">

    <TextView
        android:id="@+id/textViewEcra"
        android:layout_width="499dp"
        android:layout_height="84dp"
        android:layout_marginEnd="46dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:textAlignment="textEnd"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonElevado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="^"
        app:layout_constraintBottom_toTopOf="@+id/buttonQuadrado"
        app:layout_constraintEnd_toStartOf="@+id/buttonTan"
        app:layout_constraintStart_toEndOf="@+id/buttonNum6"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <Button
        android:id="@+id/buttonNum7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="9dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum4"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEcra" />

    <Button
        android:id="@+id/buttonNum8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum5"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum9"
        app:layout_constraintStart_toEndOf="@+id/buttonNum7"
        app:layout_constraintTop_toBottomOf="@+id/textViewEcra" />

    <Button
        android:id="@+id/buttonNum9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum6"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintStart_toEndOf="@+id/buttonNum8"
        app:layout_constraintTop_toBottomOf="@+id/textViewEcra" />

    <Button
        android:id="@+id/buttonNum4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum1"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum7" />

    <Button
        android:id="@+id/buttonNum5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum2"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum6"
        app:layout_constraintStart_toEndOf="@+id/buttonNum4"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum8" />

    <Button
        android:id="@+id/buttonNum6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum3"
        app:layout_constraintEnd_toStartOf="@+id/buttonElevado"
        app:layout_constraintStart_toEndOf="@+id/buttonNum5"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum9" />

    <Button
        android:id="@+id/buttonNum1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="30dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum0"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum4" />

    <Button
        android:id="@+id/buttonNum2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/buttonVirgula"
        app:layout_constraintEnd_toStartOf="@+id/buttonNum3"
        app:layout_constraintStart_toEndOf="@+id/buttonNum1"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum5" />

    <Button
        android:id="@+id/buttonNum3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/buttonIgual"
        app:layout_constraintEnd_toStartOf="@+id/buttonElevado"
        app:layout_constraintStart_toEndOf="@+id/buttonNum2"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum6" />

    <Button
        android:id="@+id/buttonRaiz"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="√ "
        app:layout_constraintBottom_toTopOf="@+id/buttonTan"
        app:layout_constraintEnd_toStartOf="@+id/buttonDividir"
        app:layout_constraintStart_toEndOf="@+id/buttonClear"
        app:layout_constraintTop_toBottomOf="@+id/textViewEcra" />

    <Button
        android:id="@+id/buttonNum0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="30dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonVirgula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum1" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/buttonTan"
        app:layout_constraintEnd_toStartOf="@+id/buttonRaiz"
        app:layout_constraintStart_toEndOf="@+id/buttonNum9"
        app:layout_constraintTop_toBottomOf="@+id/textViewEcra" />

    <Button
        android:id="@+id/buttonDividir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="9dp"
        android:text="/"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonRaiz"
        app:layout_constraintTop_toBottomOf="@+id/textViewEcra" />

    <Button
        android:id="@+id/buttonMultiplicar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="*"
        app:layout_constraintBottom_toTopOf="@+id/buttonMais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonTan"
        app:layout_constraintTop_toBottomOf="@+id/buttonDividir" />

    <Button
        android:id="@+id/buttonMenos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSen"
        app:layout_constraintTop_toBottomOf="@+id/buttonMais" />

    <Button
        android:id="@+id/buttonMais"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="+"
        app:layout_constraintBottom_toTopOf="@+id/buttonMenos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonCos"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiplicar" />

    <Button
        android:id="@+id/buttonVirgula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text=","
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonIgual"
        app:layout_constraintStart_toEndOf="@+id/buttonNum0"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum2" />

    <Button
        android:id="@+id/buttonIgual"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="="
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCubo"
        app:layout_constraintStart_toEndOf="@+id/buttonVirgula"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum3" />

    <Button
        android:id="@+id/buttonTan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tan"
        app:layout_constraintBottom_toTopOf="@+id/buttonCos"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiplicar"
        app:layout_constraintStart_toEndOf="@+id/buttonElevado"
        app:layout_constraintTop_toBottomOf="@+id/buttonRaiz" />

    <Button
        android:id="@+id/buttonCos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cos"
        app:layout_constraintBottom_toTopOf="@+id/buttonSen"
        app:layout_constraintEnd_toStartOf="@+id/buttonMais"
        app:layout_constraintStart_toEndOf="@+id/buttonElevado"
        app:layout_constraintTop_toBottomOf="@+id/buttonTan" />

    <Button
        android:id="@+id/buttonSen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonMenos"
        app:layout_constraintStart_toEndOf="@+id/buttonCubo"
        app:layout_constraintTop_toBottomOf="@+id/buttonCos" />

    <Button
        android:id="@+id/buttonQuadrado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x2"
        app:layout_constraintBottom_toTopOf="@+id/buttonCubo"
        app:layout_constraintEnd_toStartOf="@+id/buttonCos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/buttonNum3"
        app:layout_constraintTop_toBottomOf="@+id/buttonElevado" />

    <Button
        android:id="@+id/buttonCubo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/x3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSen"
        app:layout_constraintStart_toEndOf="@+id/buttonIgual"
        app:layout_constraintTop_toBottomOf="@+id/buttonQuadrado" />
</android.support.constraint.ConstraintLayout>